--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Basic stuff
-modid = fabric-loader
-group = net.fabricmc
-description = The mod loading component of Fabric
-url = https://github.com/FabricMC/fabric-loader
+modid = okyanus
+group = club.issizler
+description = Reimagining modded servers.
+url = TBD
 
-version = 0.4.8
+version = 0.1.0
