--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,8 @@ configurations {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:1.14.2"
-	mappings "net.fabricmc:yarn:1.14.2+build.7"
+	minecraft "com.mojang:minecraft:1.14.3-pre4"
+	mappings "net.fabricmc:yarn:1.14.3-pre4+build.3"
 
 	// Minecraft's JAR uses these annotations
 	compile 'com.google.code.findbugs:jsr305:3.0.2'
