Revert "Initial Okyanus modifications"
This reverts commit dba68e94b540e59baf375bc64fcf4be10abd41ac.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # Basic stuff
-modid = okyanus
-group = club.issizler
-description = Reimagining modded servers.
-url = TBD
+modid = fabric-loader
+group = net.fabricmc
+description = The mod loading component of Fabric
+url = https://github.com/FabricMC/fabric-loader
 
-version = 0.1.0
+version = 0.4.8
