--- a/build.gradle
+++ b/build.gradle
@@ -8,16 +8,17 @@ plugins {
 
 	id 'idea'
 	id 'eclipse'
-	id("fabric-loom") version "0.2.4-SNAPSHOT"
+	id("fabric-loom") version "0.2.3-SNAPSHOT"
 }
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-archivesBaseName = "okyanus-1.14.3"
+archivesBaseName = "fabric-loader"
 
 // Fetch build number from Jenkins
-version = "0.1.0"
+def ENV = System.getenv()
+version = version + "+" + (ENV.BUILD_NUMBER ? ("build." + ENV.BUILD_NUMBER) : "local")
 
 repositories {
 	mavenCentral()
@@ -36,14 +37,9 @@ repositories {
 	}
 }
 
-configurations {
-	fatJar
-	compile.extendsFrom fatJar
-}
-
 dependencies {
-	minecraft "com.mojang:minecraft:1.14.3"
-	mappings "net.fabricmc:yarn:1.14.3+build.1"
+	minecraft "com.mojang:minecraft:1.14"
+	mappings "net.fabricmc:yarn:1.14+build.3"
 
 	// Minecraft's JAR uses these annotations
 	compile 'com.google.code.findbugs:jsr305:3.0.2'
@@ -69,23 +65,19 @@ dependencies {
 	compile ('net.minecraft:launchwrapper:1.12') {
 		transitive = false
 	}
-
 	compile 'net.sf.jopt-simple:jopt-simple:5.0.3'
-
-	fatJar 'com.google.code.gson:gson:2.8.0'
-	fatJar 'org.javassist:javassist:3.25.0-GA'
 }
 
 processResources {
 	inputs.property "version", version
 
 	from(sourceSets.main.resources.srcDirs) {
-		include 'okyanus.json'
+		include 'fabric.mod.json'
 		expand 'version':version
 	}
 
 	from(sourceSets.main.resources.srcDirs) {
-		exclude 'okyanus.json'
+		exclude 'fabric.mod.json'
 	}
 }
 
@@ -94,9 +86,6 @@ jar {
 		attributes (
 			'Main-Class': 'net.fabricmc.loader.launch.server.FabricServerLauncher'
 		)
-	}
-	from {
-		configurations.fatJar.collect { it.isDirectory() ? it : zipTree(it) }
 	}
 }
 
@@ -146,4 +135,38 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 	from sourceSets.main.allSource
 }
 
+publishing {
+	publications {
+		mavenJava(MavenPublication) {
+			// add all the jars that should be included when publishing to maven
+			artifact(file("${project.buildDir}/libs/$archivesBaseName-${version}.jar")) {
+				builtBy remapJar
+			}
+			artifact(sourcesJar) {
+				builtBy remapSourcesJar
+			}
+			artifact(file('src/main/resources/fabric-installer.json')) {
+				builtBy remapJar
+			}
+			artifact(file('src/main/resources/fabric-installer.launchwrapper.json')) {
+				builtBy remapJar
+				classifier = "launchwrapper"
+			}
+		}
+	}
+
+	// select the repositories you want to publish to
+	repositories {
+		if (project.hasProperty('mavenPass')) {
+			maven {
+				url = "http://mavenupload.modmuss50.me/"
+				credentials {
+					username = "buildslave"
+					password = project.getProperty('mavenPass')
+				}
+			}
+		}
+	}
+}
+apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/license.gradle'
 apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/ideconfig.gradle'
