--- a/build.gradle
+++ b/build.gradle
@@ -14,11 +14,7 @@ plugins {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-archivesBaseName = "fabric-loader"
-
-// Fetch build number from Jenkins
-def ENV = System.getenv()
-version = version + "+" + (ENV.BUILD_NUMBER ? ("build." + ENV.BUILD_NUMBER) : "local")
+archivesBaseName = "okyanus-1.14.3"
 
 repositories {
 	mavenCentral()
@@ -37,9 +33,14 @@ repositories {
 	}
 }
 
+configurations {
+	fatJar
+	compile.extendsFrom fatJar
+}
+
 dependencies {
-	minecraft "com.mojang:minecraft:1.14"
-	mappings "net.fabricmc:yarn:1.14+build.3"
+	minecraft "com.mojang:minecraft:1.14.3"
+	mappings "net.fabricmc:yarn:1.14.3+build.1"
 
 	// Minecraft's JAR uses these annotations
 	compile 'com.google.code.findbugs:jsr305:3.0.2'
@@ -66,6 +67,9 @@ dependencies {
 		transitive = false
 	}
 	compile 'net.sf.jopt-simple:jopt-simple:5.0.3'
+
+	fatJar 'com.google.code.gson:gson:2.8.0'
+	fatJar 'com.google.jimfs:jimfs:1.1'
 }
 
 processResources {
@@ -86,6 +90,9 @@ jar {
 		attributes (
 			'Main-Class': 'net.fabricmc.loader.launch.server.FabricServerLauncher'
 		)
+	}
+	from {
+		configurations.fatJar.collect { it.isDirectory() ? it : zipTree(it) }
 	}
 }
 
@@ -168,5 +175,5 @@ publishing {
 		}
 	}
 }
-apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/license.gradle'
-apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/ideconfig.gradle'
+//apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/license.gradle'
+//apply from: 'https://github.com/FabricMC/fabric-docs/raw/master/gradle/ideconfig.gradle'
